implement server side user and person endpoints
