# server/api/models/Person.js
@@ -1,0 +1,7 @@
+const mongoose = require('mongoose');
+
+module.exports = mongoose.model('Person', {
+  userId: String,
+  firstName: String,
+  lastName: String,
+});
